Revise README with project details and setup instructions
Updated README to provide detailed project overview, features, requirements, and instructions for running the UTSA Dining Application.